--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,10 @@
   <meta http-equiv="Content-Language" content="{{ .Site.Language.Lang }}">
   <meta name="color-scheme" content="light dark">
 
+  {{ if .Site.Params.csp }}
+  {{ partial "csp.html" . }}
+  {{ end }}
+
   {{ with .Site.Params.author }}
   <meta name="author" content="{{ . }}">{{ end }}
   <meta name="description" content="{{ .Description | default (.Summary | default .Site.Params.description ) }}">
